@@ -2,6 +2,10 @@
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # $Header$
 
+  27 Sep 2003; Martin Schlemmer <azarah@gentoo.org> libsandbox.c :
+  Fix our mkdir wrapper to check if the dir exist, and return EEXIST if so,
+  rather than failing with a violation, bug #29748.
+
   27 Jul 2003; Martin Schlemmer <azarah@gentoo.org> libsandbox.c :
   Fix canonicalize() to ignore calls with path = "".
 
